--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Master Degree (CS)</h3>
-	   					<p>Aug 2018 - Present</p>
+	   					<p>Aug 2018 - Aug 2020</p>
 	   				</div>
 
 	   				<div class="timeline-content">
