--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
          <li><a href="https://github.com/qaixerabbas/" target="blank"><i class="fa fa-github"></i></a></li>
          <li><a href="mailto:mqaiser617@gmail.com" target="blank"><i class="fa fa-google"></i></a></li>
          <li><a href="https://www.linkedin.com/in/qaixerabbas/" target="blank"><i class="fa fa-linkedin"></i></a></li>
-         <li><a href="https://www.instagram.com/qyxr_/" target="blank"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://www.instagram.com/qaixer_abbas/" target="blank"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
