--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
    				<img src="images/dp2.png" alt="Profile Picture" style="width:100px;height:100px;">
 
-   				<p class="lead">An Energetic Deep Learning Enthusiast, experienced in the latest computing technologies and A.I including Python, Deep Learning, Computer Vision and Machine Learning. Currently working as a Research Assistant at Bioinformatics Research Lab University of Engineering & Technology Lahore.</p>
+   				<p class="lead">An Energetic Deep Learning Enthusiast, experienced in the latest computing technologies and A.I including Python, Deep Learning, Computer Vision and Machine Learning. Currently working as a Teaching Fellow at Department of Computer Science, University of Engineering & Technology Lahore.</p>
    			</div>   			
 
    		</div>   		
@@ -157,6 +157,27 @@
    		<div class="col-twelve">
 
    			<div class="timeline-wrap">
+				
+<!-- 				 Latest Timeline Block-->
+				  <div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-graduation-cap"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Teaching Fellow</h3>
+	   					<p>Mar 2021 - Present</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>Department of Computer Science, University of Engineering and Technology Lahore</h4>
+	   					<p>Working as full time faculty member and teaching undergraduate courses (Theory+lab) . My other responsibilities are to assist the senior faculty in designing course contents and writing proposals for research grants, research the latest Deep Learning and Computer Vision technologies to solve real-world problems. and help and guide final-year students in their Final Year Projects (FYPs).
+</p>
+	   				</div>
+
+	   			</div>
+<!-- 				 -->
 
    				<div class="timeline-block">
 
@@ -166,12 +187,12 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Research Assistant</h3>
-	   					<p>Jan 2020 - Present</p>
+	   					<p>Jan 2020 - Oct 2020</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>Bioinformatics Research Lab UET Lahore</h4>
-	   					<p>Working with <a href="https://scholar.google.com.pk/citations?user=WM9A5m4AAAAJ&hl=en">Dr. Usman Ghani Khan</a> on detection and prediction of one of the rare and lethal skin cancer Acral Lentiginous Melanoma in dermoscopic images. In this research project we are developing a system which will detect and predict the melanoma in early stages using dermoscopic images. I am developing a CNN from scratch in Keras and Tensorflow.
+	   					<p>Worked with <a href="https://scholar.google.com.pk/citations?user=WM9A5m4AAAAJ&hl=en">Dr. Usman Ghani Khan</a> on detection and prediction of one of the rare and lethal skin cancer Acral Lentiginous Melanoma in dermoscopic images. In this research project we developed a system to detect and predict the melanoma in early stages using dermoscopic images. I used Keras and Tensorflow for developing this system. The research work has been submitted to an international journal.
 </p>
 	   				</div>
 
